deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vacme-parser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vacme-parser
  template:
    metadata:
      labels:
        app: vacme-parser
    spec:
      serviceAccountName: vacme-parser
      containers:
      - name: vacme-parser
        image: golonzovsky/vacme-parser:latest
---
apiVersion: v1
kind: Service
metadata:
  name: vacme-parser
spec:
  ports:
    - name: api
      port: 5000
      targetPort: 5000
  selector:
    app: vacme-parser
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vacme-parser
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: vacme.kloud.top
      http:
        paths:
          - backend:
              service:
                name: vacme-parser
                port:
                  name: api
            path: /api(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: vacme-parser #todo UI eventually to be here
                port:
                  name: api
            path: /
            pathType: Exact
  tls:
    - hosts:
        - vacme.kloud.top
      secretName: vacme-tls
